# mapa

./: .dcignore  .env  .gitignore  .pre-commit-config.yaml  README.md  biome.json  build_production.sh  build_production.yml  build_staging.yml  docker-compose.yml  manual_build_and_deploy_dev_django_lambdas.sh  manual_build_and_deploy_staging_django_lambdas.sh  manual_build_and_push_django_lambdas_image.sh  mapa-production-redeploy.sh  mapa-production.yml  tesh.sh
django/: .gitignore  Dockerfile  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  setup.py  supervisord.conf
django/mapa/: settings.py  urls.py  util.py  wsgi.py
django/mapa-cdk-test/: .gitignore  cdk.json  package-lock.json  package.json
django/mapa-cdk-test/cdk-plop-guffo/: cdkCFExecutionPolicy.json
django/mapa-cdk-test/lib/: mapa-app-stack.ts  mapa-infra-stack.ts  mapa-static-site-stack.ts  trust-stack.ts  us-east-certificate-stack.ts
django/mapa-cdk-test/lib/config/: certificate-arns.json
django/mapa-cdk-test/lib/modules/: get-certificate.ts
django/mapa-cdk-test/lib/utils/: get-context.ts  get-env-context.ts  utils.ts
django/mapa-cdk-test/test/: mapa-cdk-test.test.ts
django/mapa/app/: __init__.py  admin.py  apps.py  auth.py  enums.py  envs.py  exceptions.py  export.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
django/mapa/app/cron/: cron.py  cron.sh  crontab.txt
django/mapa/app/migrations/: 0001_initial.py  0002_map_folder_feature.py  0003_feature_geom.py  0004_featuretype.py  0005_feature_feature_type.py  0006_feature_feature_type_fields.py  0007_alter_feature_feature_type_fields.py  0008_alter_feature_feature_type_fields.py  0009_alter_feature_feature_type_fields.py  0010_alter_map_owner.py  0011_rename_feature_features_and_more.py  0012_rename_feature_type_fields_features_data_and_more.py  0013_maps_default_symbology.py  0014_alter_features_schema.py  0015_alter_features_schema.py  0016_alter_features_schema.py  0017_remove_features_name.py  0018_rename_map_features_map_id.py  0019_alter_features_map_id.py  0020_alter_featureschemas_map.py  0021_rename_map_featureschemas_map_id.py  0022_alter_features_schema_and_more.py  0023_featureschemas_deleted_at.py  0024_features_deleted_at_maps_deleted_at.py  0025_featureschemas_default_symbology.py  0026_alter_maps_default_symbology.py  0027_alter_maps_owner_rename_owner_maps_owner_id.py  0028_remove_featureschemas_map_id_featureschemas_owner_id.py  0029_maps_visible_schema_ids.py  0030_rename_visible_schema_ids_maps_hidden_schema_ids.py  0031_maps_last_used_schema_id.py  0032_featureschemas_symbology.py  0033_alter_featureschemas_definition.py  0034_alter_featureschemas_symbology.py  0035_features_symbol_id.py  (+24 more)
django/mapa/migration/: README.md  json_to_csv.py  migrate.py  migrate_foraging_map.py
(+242 files in other folders)
