[tool.poetry]
name = "mapa"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
psycopg2-binary = "^2.9.11"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
django-model-utils = "^5.0.0"
gunicorn = "^25.0.2"
gevent = "^25.9.1"
greenlet = "^3.3.1"
social-auth-app-django = "^5.7.0"
social-auth-core = "^4.8.3"
sentry-sdk = "^2.52.0"
django-simple-history = "^3.11.0"
jsonschema = "^4.26.0"
djangorestframework-gis = "^1.2"
django-filter = "^25.2"
djangorestframework-csv = "^3.0.1"
pytz = "^2025.2"
google-api-python-client = "^2.188.0"
google-auth-httplib2 = "^0.3.0"
google-auth-oauthlib = "^1.2.4"
aws-lambda-powertools = "^3.24.0"
boto3 = "^1.42.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
