[tool.poetry]
name = "mapa"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
psycopg2-binary = "^2.9.12"
djangorestframework = "^3.17.1"
django-cors-headers = "^4.9.0"
django-model-utils = "^5.0.0"
gunicorn = "^26.0.0"
gevent = "^26.5.0"
greenlet = "^3.5.3"
social-auth-app-django = "^5.9.0"
social-auth-core = "^4.9.1"
sentry-sdk = "^2.66.1"
django-simple-history = "^3.12.0"
jsonschema = "^4.26.0"
djangorestframework-gis = "^1.2"
django-filter = "^25.2"
djangorestframework-csv = "^3.0.1"
pytz = "^2026.2"
google-api-python-client = "^2.198.0"
google-auth-httplib2 = "^0.4.0"
google-auth-oauthlib = "^1.4.0"
aws-lambda-powertools = "^3.31.1"
boto3 = "^1.43.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
